fdo#47958: gross cut/paste signal emission nonsense

Change-Id: I60b7a4c5b80410429e5489ee6517bbda8cf328dd