sc/source/ui/view/viewfunc.cxx
@@ -552,16 +552,13 @@ void ScViewFunc::EnterData( SCCOL nCol, SCROW nRow, SCTAB nTab,
 
         pDocSh->UpdateOle(GetViewData());
 
-        // #i97876# Spreadsheet data changes are not notified
-        ScModelObj* pModelObj = ScModelObj::getImplementation( pDocSh->GetModel() );
-        if ( pModelObj && pModelObj->HasChangesListeners() )
+        ScRangeList aChangeRanges;
+        HelperNotifyChanges aHelperNotifyChanges(&aChangeRanges, "cell-change");
+        if (aHelperNotifyChanges.getMustPropagateChanges())
         {
-            ScRangeList aChangeRanges;
             ScMarkData::iterator itr = rMark.begin(), itrEnd = rMark.end();
             for (; itr != itrEnd; ++itr)
                 aChangeRanges.Append( ScRange( nCol, nRow, *itr ) );
-
-            pModelObj->NotifyChanges( OUString( "cell-change" ), aChangeRanges );
         }
 
         if ( bRecord )
@@ -729,19 +726,16 @@ void ScViewFunc::EnterData( SCCOL nCol, SCROW nRow, SCTAB nTab,
 
             pDocSh->UpdateOle(GetViewData());
 
-            // #i97876# Spreadsheet data changes are not notified
-            ScModelObj* pModelObj = ScModelObj::getImplementation( pDocSh->GetModel() );
-            if ( pModelObj && pModelObj->HasChangesListeners() )
+            ScRangeList aChangeRanges;
+            HelperNotifyChanges aHelperNotifyChanges(&aChangeRanges, "cell-change");
+            if (aHelperNotifyChanges.getMustPropagateChanges())
             {
-                ScRangeList aChangeRanges;
                 itr = rMark.begin();
                 for (; itr != itrEnd; ++itr)
                 {
                     aChangeRanges.Append( ScRange( nCol, nRow, *itr ) );
                 }
-                pModelObj->NotifyChanges( OUString( "cell-change" ), aChangeRanges );
             }
-
             aModificator.SetDocumentModified();
         }
         lcl_PostRepaintCondFormat( pDoc->GetCondFormat( nCol, nRow, nTab ), pDocSh );
@@ -1247,9 +1241,8 @@ void ScViewFunc::ApplySelectionPattern( const ScPatternAttr& rAttr,
         CellContentChanged();
     }
 
-    // #i97876# Spreadsheet data changes are not notified
-    ScModelObj* pModelObj = ScModelObj::getImplementation( pDocSh->GetModel() );
-    if ( pModelObj && pModelObj->HasChangesListeners() )
+    HelperNotifyChanges aHelperNotifyChanges(&aChangeRanges, "attribute");
+    if (aHelperNotifyChanges.getMustPropagateChanges())
     {
         ::com::sun::star::uno::Sequence< ::com::sun::star::beans::PropertyValue > aProperties;
         sal_Int32 nCount = 0;
@@ -1276,9 +1269,7 @@ void ScViewFunc::ApplySelectionPattern( const ScPatternAttr& rAttr,
                 }
             }
         }
-        pModelObj->NotifyChanges( OUString( "attribute" ), aChangeRanges, aProperties );
     }
-
     StartFormatArea();
 }
 
@@ -1491,18 +1482,16 @@ sal_Bool ScViewFunc::InsertCells( InsCellCmd eCmd, sal_Bool bRecord, sal_Bool bP
             CellContentChanged();
             ResetAutoSpell();
 
-            // #i97876# Spreadsheet data changes are not notified
-            ScModelObj* pModelObj = ScModelObj::getImplementation( pDocSh->GetModel() );
-            if ( pModelObj && pModelObj->HasChangesListeners() )
+            ScRangeList aChangeRanges;
+            if ( eCmd == INS_INSROWS || eCmd == INS_INSCOLS )
             {
-                if ( eCmd == INS_INSROWS || eCmd == INS_INSCOLS )
+                OUString aOperation = ( eCmd == INS_INSROWS) ?
+                    OUString("insert-rows"):
+                    OUString("insert-columns");
+                HelperNotifyChanges aHelperNotifyChanges(&aChangeRanges, aOperation);
+                if (aHelperNotifyChanges.getMustPropagateChanges())
                 {
-                    ScRangeList aChangeRanges;
                     aChangeRanges.Append( aRange );
-                    OUString aOperation = ( eCmd == INS_INSROWS ?
-                        OUString( "insert-rows" ) :
-                        OUString( "insert-columns" ) );
-                    pModelObj->NotifyChanges( aOperation, aChangeRanges );
                 }
             }
         }
@@ -1555,18 +1544,16 @@ void ScViewFunc::DeleteCells( DelCellCmd eCmd, sal_Bool bRecord )
         CellContentChanged();
         ResetAutoSpell();
 
-        // #i97876# Spreadsheet data changes are not notified
-        ScModelObj* pModelObj = ScModelObj::getImplementation( pDocSh->GetModel() );
-        if ( pModelObj && pModelObj->HasChangesListeners() )
+        if ( eCmd == DEL_DELROWS || eCmd == DEL_DELCOLS )
         {
-            if ( eCmd == DEL_DELROWS || eCmd == DEL_DELCOLS )
+            ScRangeList aChangeRanges;
+            OUString aOperation = ( eCmd == DEL_DELROWS) ?
+              OUString("delete-rows"):
+              OUString("delete-columns");
+            HelperNotifyChanges aHelperNotifyChanges(&aChangeRanges, aOperation);
+            if (aHelperNotifyChanges.getMustPropagateChanges())
             {
-                ScRangeList aChangeRanges;
-                aChangeRanges.Append( aRange );
-                OUString aOperation = ( eCmd == DEL_DELROWS ?
-                    OUString( "delete-rows" ) :
-                    OUString( "delete-columns" ) );
-                pModelObj->NotifyChanges( aOperation, aChangeRanges );
+                aChangeRanges.Append(aRange);
             }
         }
 
@@ -1925,11 +1912,10 @@ void ScViewFunc::DeleteContents( sal_uInt16 nFlags, sal_Bool bRecord )
 
     pDocSh->UpdateOle(GetViewData());
 
-    // #i97876# Spreadsheet data changes are not notified
-    ScModelObj* pModelObj = ScModelObj::getImplementation( pDocSh->GetModel() );
-    if ( pModelObj && pModelObj->HasChangesListeners() )
+    ScRangeList aChangeRanges;
+    HelperNotifyChanges aHelperNotifyChanges(&aChangeRanges, "cell-change");
+    if (aHelperNotifyChanges.getMustPropagateChanges())
     {
-        ScRangeList aChangeRanges;
         if ( bSimple )
         {
             aChangeRanges.Append( aMarkRange );
@@ -1938,7 +1924,6 @@ void ScViewFunc::DeleteContents( sal_uInt16 nFlags, sal_Bool bRecord )
         {
             aFuncMark.FillRangeListWithMarks( &aChangeRanges, false );
         }
-        pModelObj->NotifyChanges( OUString( "cell-change" ), aChangeRanges );
     }
 
     aModificator.SetDocumentModified();
@@ -2223,10 +2208,10 @@ void ScViewFunc::SetWidthOrHeight( sal_Bool bWidth, SCCOLROW nRangeCnt, SCCOLROW
     // #i97876# Spreadsheet data changes are not notified
     if ( bWidth )
     {
-        ScModelObj* pModelObj = ScModelObj::getImplementation( pDocSh->GetModel() );
-        if ( pModelObj && pModelObj->HasChangesListeners() )
+        ScRangeList aChangeRanges;
+        HelperNotifyChanges aHelperNotifyChanges(&aChangeRanges, "column-resize");
+        if (aHelperNotifyChanges.getMustPropagateChanges())
         {
-            ScRangeList aChangeRanges;
             itr = pMarkData->begin();
             for (; itr != itrEnd; ++itr)
             {
@@ -2242,7 +2227,6 @@ void ScViewFunc::SetWidthOrHeight( sal_Bool bWidth, SCCOLROW nRangeCnt, SCCOLROW
                     }
                 }
             }
-            pModelObj->NotifyChanges( OUString( "column-resize" ), aChangeRanges );
         }
     }
 }
